<resources>
    <string name="app_name">live</string>
    <string name="logo">logo</string>
    <string name="welcome_title">CD LIVE</string>
    <string name="password">Password</string>
    <string name="email">E-mail</string>
    <string name="welcome_back">Welcome\nBack</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="forgot_password">Forgot password</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="create_account">Create\nAccount</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="version">Version</string>
    <string name="contact_us">Contact Us</string>
    <string name="contact_email">IT@chinadailyhk.com</string>
    <string name="account">Account</string>
    <string name="default_options">Default Options</string>
    <string name="log_out">Log Out</string>
    <string name="change_your_profile_picture">Change Your Profile Picture</string>
    <string name="save">Save</string>
    <string name="my_live">My Live</string>
    <string name="all">All</string>
    <string name="event_xxx">Event：%s</string>
    <string name="live_time_format">20197/20\n20:00&#8211;22:0</string>
    <string name="options">Options</string>
    <string name="go">Go</string>
    <string name="session_xxx">Session：%s</string>
    <string name="create">New</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="event_category">Event Category</string>
    <string name="session">Session</string>
    <string name="end_time">End Time</string>
    <string name="select_title_picture">Select Title Picture</string>
    <string name="next">Next</string>
    <string name="home_left">Home Left</string>
    <string name="home_right">Home Right</string>
    <string name="portrait">Portrait</string>
    <string name="landscape">Landscape</string>
    <string name="back_camera">Back Camera</string>
    <string name="front_camera">Front Camera</string>
    <string name="camera">Camera</string>
    <string name="style">Style</string>
    <string name="done">Done</string>
    <string name="video_quality">Video Quality</string>
    <string name="audio_quality">Audio Quality</string>
    <string name="resolution">Resolution</string>
    <string name="resolution_540p">540P</string>
    <string name="resolution_720p">720P</string>
    <string name="resolution_1080p">1080P</string>
    <string name="quality_mode">Quality Mode</string>
    <string name="quality_resolution_first">Resolution First</string>
    <string name="quality_fluency_first">Fluency First</string>
    <string name="encode_mode">Encode Mode</string>
    <string name="video_encode_hard">Hard Encode</string>
    <string name="video_encode_soft">Soft Encode</string>
    <string name="audio_encode_hard">Hard Encode</string>
    <string name="audio_encode_soft">Soft Encode</string>
    <string name="video_beauty_mode">Beauty Mode</string>
    <string name="video_beauty_normal">Beauty Normal</string>
    <string name="video_beauty_professional">Beauty Professional</string>
    <string name="sampling_rate">Sampling Rate</string>
    <string name="audio_rate_32000_hz">32000.0Hz</string>
    <string name="audio_rate_44100_hz">44100.0Hz</string>
    <string name="audio_rate_48000_hz">48000.0Hz</string>
    <string name="audio_bitrate_medium_64kbps">Medium（64kbps）</string>
    <string name="audio_bitrate_high_128kbps">High（128kbps）</string>
    <string name="audio_bitrate_excellent_192kbps">Excellent（192kbps）</string>
    <string name="audio_channel">Channel</string>
    <string name="audio_channel_mono">Mono-Channel</string>
    <string name="audio_channel_double">Double-Channel</string>
    <string name="audio_bit_16bit">16bit</string>
    <string name="audio_format_lc">AAC-LC</string>
    <string name="audio_format_he">HE-AAC</string>
    <string name="audio_format_hev2">HEV2-AAC</string>
    <string name="audio_format_ld">AAC-LD</string>
    <string name="audio_format">Format</string>
    <string name="reset_your_password">Reset your Password</string>
    <string name="new_password">New Password</string>
    <string name="ok">OK</string>
    <string name="your_email_here">Your Email here</string>
    <string name="verification_code_here">Verification Code here</string>
    <string name="verification_code">Verification Code</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="url">URL</string>
    <string name="open_network">Open Network</string>
    <string name="new_str">New</string>
    <string name="regex_password">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789-</string>
    <string name="live">Live</string>
    <string name="playback">Playback</string>
    <string name="pending">Pending</string>
    <string name="cancel">Cancel</string>
    <string name="facebook">Facebook</string>
    <string name="moments">Moments</string>
    <string name="wechat">Wechat</string>
    <string name="snapchat">Snapchat</string>
    <string name="instagram">Instagram</string>
    <string name="google_plus">Google+</string>
    <string name="linkedin">LinkedIn</string>
    <string name="twitter">Twitter</string>

</resources>
