<?xml version="1.0" encoding="utf-8"?>
<com.qmuiteam.qmui.widget.QMUIWindowInsetLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

    <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?attr/qmui_topbar_height"
            android:fitsSystemWindows="true">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvAudioRate"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:fontFamily="@font/lato_regular"
                    android:gravity="center_vertical"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:text="@string/sampling_rate"
                    android:textColor="@color/textBlack"
                    android:textSize="18sp"
                    app:layout_constraintTop_toTopOf="parent" />

            <com.qmuiteam.qmui.alpha.QMUIAlphaTextView
                    android:id="@+id/btnAudioRate32000"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@color/backgroundWhite"
                    android:drawableEnd="@drawable/hk_check"
                    android:fontFamily="@font/lato_regular"
                    android:gravity="center_vertical"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:text="@string/audio_rate_32000_hz"
                    android:textColor="@color/textBlack"
                    android:textSize="16sp"
                    app:layout_constraintTop_toBottomOf="@+id/tvAudioRate" />

            <com.qmuiteam.qmui.alpha.QMUIAlphaTextView
                    android:id="@+id/btnAudioRate44100"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@color/backgroundWhite"
                    android:drawableEnd="@drawable/hk_check"
                    android:fontFamily="@font/lato_regular"
                    android:gravity="center_vertical"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:text="@string/audio_rate_44100_hz"
                    android:textColor="@color/textBlack"
                    android:textSize="16sp"
                    app:layout_constraintTop_toBottomOf="@+id/btnAudioRate32000" />

            <com.qmuiteam.qmui.alpha.QMUIAlphaTextView
                    android:id="@+id/btnAudioRate48000"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@color/backgroundWhite"
                    android:drawableEnd="@drawable/hk_check"
                    android:fontFamily="@font/lato_regular"
                    android:gravity="center_vertical"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:text="@string/audio_rate_48000_hz"
                    android:textColor="@color/textBlack"
                    android:textSize="16sp"
                    app:layout_constraintTop_toBottomOf="@+id/btnAudioRate44100" />

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvAudioEncodeMode"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:fontFamily="@font/lato_regular"
                    android:gravity="center_vertical"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:text="@string/encode_mode"
                    android:textColor="@color/textBlack"
                    android:textSize="18sp"
                    app:layout_constraintTop_toBottomOf="@+id/btnAudioRate48000" />

            <com.qmuiteam.qmui.alpha.QMUIAlphaTextView
                    android:id="@+id/btnAudioHardEncode"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@color/backgroundWhite"
                    android:drawableEnd="@drawable/hk_check"
                    android:fontFamily="@font/lato_regular"
                    android:gravity="center_vertical"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:text="@string/video_encode_hard"
                    android:textColor="@color/textBlack"
                    android:textSize="16sp"
                    app:layout_constraintTop_toBottomOf="@+id/tvAudioEncodeMode" />

            <com.qmuiteam.qmui.alpha.QMUIAlphaTextView
                    android:id="@+id/btnAudioSoftEncode"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@color/backgroundWhite"
                    android:drawableEnd="@drawable/hk_check"
                    android:fontFamily="@font/lato_regular"
                    android:gravity="center_vertical"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:text="@string/audio_encode_soft"
                    android:textColor="@color/textBlack"
                    android:textSize="16sp"
                    app:layout_constraintTop_toBottomOf="@+id/btnAudioHardEncode" />


            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvChannel"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:fontFamily="@font/lato_regular"
                    android:gravity="center_vertical"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:text="@string/audio_channel"
                    android:textColor="@color/textBlack"
                    android:textSize="18sp"
                    app:layout_constraintTop_toBottomOf="@id/btnAudioSoftEncode" />

            <com.qmuiteam.qmui.alpha.QMUIAlphaTextView
                    android:id="@+id/btnChannelMono"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@color/backgroundWhite"
                    android:drawableEnd="@drawable/hk_check"
                    android:fontFamily="@font/lato_regular"
                    android:gravity="center_vertical"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:text="@string/audio_channel_mono"
                    android:textColor="@color/textBlack"
                    android:textSize="16sp"
                    app:layout_constraintTop_toBottomOf="@+id/tvChannel" />

            <com.qmuiteam.qmui.alpha.QMUIAlphaTextView
                    android:id="@+id/btnChannelDouble"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@color/backgroundWhite"
                    android:drawableEnd="@drawable/hk_check"
                    android:fontFamily="@font/lato_regular"
                    android:gravity="center_vertical"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:text="@string/audio_channel_double"
                    android:textColor="@color/textBlack"
                    android:textSize="16sp"
                    app:layout_constraintTop_toBottomOf="@+id/btnChannelMono" />

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvAudioFormat"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:fontFamily="@font/lato_regular"
                    android:gravity="center_vertical"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:text="@string/audio_format"
                    android:textColor="@color/textBlack"
                    android:textSize="18sp"
                    app:layout_constraintTop_toBottomOf="@id/btnChannelDouble" />

            <com.qmuiteam.qmui.alpha.QMUIAlphaTextView
                    android:id="@+id/btnAudioFormatLC"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@color/backgroundWhite"
                    android:drawableEnd="@drawable/hk_check"
                    android:fontFamily="@font/lato_regular"
                    android:gravity="center_vertical"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:text="@string/audio_format_lc"
                    android:textColor="@color/textBlack"
                    android:textSize="16sp"
                    app:layout_constraintTop_toBottomOf="@+id/tvAudioFormat" />

            <com.qmuiteam.qmui.alpha.QMUIAlphaTextView
                    android:id="@+id/btnAudioFormatHE"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@color/backgroundWhite"
                    android:drawableEnd="@drawable/hk_check"
                    android:fontFamily="@font/lato_regular"
                    android:gravity="center_vertical"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:text="@string/audio_format_he"
                    android:textColor="@color/textBlack"
                    android:textSize="16sp"
                    app:layout_constraintTop_toBottomOf="@+id/btnAudioFormatLC" />

            <com.qmuiteam.qmui.alpha.QMUIAlphaTextView
                    android:id="@+id/btnAudioFormatHEV2"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@color/backgroundWhite"
                    android:drawableEnd="@drawable/hk_check"
                    android:fontFamily="@font/lato_regular"
                    android:gravity="center_vertical"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:text="@string/audio_format_hev2"
                    android:textColor="@color/textBlack"
                    android:textSize="16sp"
                    app:layout_constraintTop_toBottomOf="@+id/btnAudioFormatHE" />

            <com.qmuiteam.qmui.alpha.QMUIAlphaTextView
                    android:id="@+id/btnAudioFormatLD"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@color/backgroundWhite"
                    android:drawableEnd="@drawable/hk_check"
                    android:fontFamily="@font/lato_regular"
                    android:gravity="center_vertical"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:text="@string/audio_format_ld"
                    android:textColor="@color/textBlack"
                    android:textSize="16sp"
                    app:layout_constraintTop_toBottomOf="@+id/btnAudioFormatHEV2" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <com.qmuiteam.qmui.widget.QMUITopBarLayout
            android:id="@+id/topBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true" />
</com.qmuiteam.qmui.widget.QMUIWindowInsetLayout>