<?xml version="1.0" encoding="utf-8"?>
<com.qmuiteam.qmui.widget.QMUIWindowInsetLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?attr/qmui_topbar_height"
            android:fitsSystemWindows="true">

        <com.qmuiteam.qmui.alpha.QMUIAlphaTextView
                android:id="@+id/tvHomeLeft"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:background="@color/backgroundWhite"
                android:drawableEnd="@drawable/hk_check"
                android:fontFamily="@font/lato_regular"
                android:gravity="center_vertical"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/home_left"
                android:textColor="@color/textBlack"
                android:textSize="16sp"
                app:layout_constraintTop_toTopOf="parent" />

        <com.qmuiteam.qmui.alpha.QMUIAlphaTextView
                android:id="@+id/tvHomeRight"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@color/backgroundWhite"
                android:drawableEnd="@drawable/hk_check"
                android:fontFamily="@font/lato_regular"
                android:gravity="center_vertical"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/home_right"
                android:textColor="@color/textBlack"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@+id/tvHomeLeft" />

        <com.qmuiteam.qmui.alpha.QMUIAlphaTextView
                android:id="@+id/tvPortrait"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@color/backgroundWhite"
                android:drawableEnd="@drawable/hk_check"
                android:fontFamily="@font/lato_regular"
                android:gravity="center_vertical"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/portrait"
                android:textColor="@color/textBlack"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@+id/tvHomeRight" />


        <com.qmuiteam.qmui.alpha.QMUIAlphaTextView
                android:id="@+id/tvBackCamera"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:background="@color/backgroundWhite"
                android:drawableEnd="@drawable/hk_check"
                android:fontFamily="@font/lato_regular"
                android:gravity="center_vertical"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/back_camera"
                android:textColor="@color/textBlack"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@+id/tvPortrait" />

        <com.qmuiteam.qmui.alpha.QMUIAlphaTextView
                android:id="@+id/tvFrontCamera"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@color/backgroundWhite"
                android:drawableEnd="@drawable/hk_check"
                android:fontFamily="@font/lato_regular"
                android:gravity="center_vertical"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/front_camera"
                android:textColor="@color/textBlack"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@+id/tvBackCamera" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.qmuiteam.qmui.widget.QMUITopBarLayout
            android:id="@+id/topBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true" />
</com.qmuiteam.qmui.widget.QMUIWindowInsetLayout>