<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:fitsSystemWindows="true"
            android:fontFamily="@font/lato_semibold"
            android:text="@string/welcome_back"
            android:textColor="@color/textBlack"
            android:textSize="36sp"
            app:layout_constraintBottom_toTopOf="@+id/textInputEmail"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputEmail"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_marginStart="48dp"
            android:layout_marginEnd="48dp"
            android:gravity="bottom"
            app:hintTextAppearance="@style/LoginHintTextAppearance"
            app:layout_constraintBottom_toTopOf="@+id/textInputPassword">

        <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/hk_edit_background"
                android:gravity="start|bottom"
                android:hint="@string/email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:lines="1"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:textAppearance="@style/LoginTextAppearance" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputPassword"
            android:layout_width="match_parent"
            android:layout_height="84dp"
            android:layout_marginStart="48dp"
            android:layout_marginEnd="48dp"
            android:gravity="bottom"
            android:paddingTop="12dp"
            app:hintTextAppearance="@style/LoginHintTextAppearance"
            app:layout_constraintBottom_toTopOf="@+id/viewCenter"
            app:passwordToggleEnabled="true">

        <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/hk_edit_background"
                android:gravity="start|bottom"
                android:hint="@string/password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:lines="1"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:textAppearance="@style/LoginTextAppearance" />
    </com.google.android.material.textfield.TextInputLayout>

    <View
            android:id="@+id/viewCenter"
            android:layout_width="1px"
            android:layout_height="1px"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <com.qmuiteam.qmui.alpha.QMUIAlphaImageButton
            android:id="@+id/btnSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="48dp"
            android:background="@android:color/transparent"
            android:src="@drawable/hk_btn_login"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/viewCenter" />

    <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:fontFamily="@font/lato_semibold"
            android:text="@string/sign_in"
            android:textColor="@color/textBlack"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="@id/btnSignIn"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@id/btnSignIn" />

    <com.qmuiteam.qmui.alpha.QMUIAlphaTextView
            android:id="@+id/btnSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginBottom="60dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/lato_semibold"
            android:text="@string/sign_up"
            android:textColor="@color/textBlue"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent" />

    <com.qmuiteam.qmui.alpha.QMUIAlphaTextView
            android:id="@+id/btnForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="48dp"
            android:layout_marginBottom="60dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/lato_semibold"
            android:text="@string/forgot_password"
            android:textColor="@color/textBlue"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>